Bug #35744 --> fix hang when fetching urls that don't exist. The fix was to implement nsIWebProgressListener by the url fetcher. This will tell us when we've failed to fetch the url. Also had to make sure we passed in a valid load group to the channel. And added protection to make sure the OnStopRequest doesn't get processed twice.

One caveat is still left with this bug: you are still prompted after each url we fail to load. This
is pretty annoying.

r=bienvenu